src/test/deca/context/valid/method_int_without_return.deca
/*
    Description : Test sur une méthode de type int n'ayant pas d'instruction return

    Résultat : OK
*/
class A{
    int x(){
        println("aaa");
    }

}
